# PreparedProject

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  ProjectRefrence.cmake  example-vulkan-基础运行.cpp  example-vulkan-基础运行3.cpp  gpu-做个贴图.cpp  gpu-坐标矩阵变换.cpp  gpu-显示一个三角形.cpp
ArchiveTool/: CMakeLists.txt
ArchiveTool/interface/: ArchiveTool.cpp  ArchiveTool.h  PwdManager.h
ArchiveTool/src/: ArchiveMsg.cpp  ArchiveMsg.h  ArchiveTool.cpp  ArchiveToolMain.cpp  ArchiveType.cpp  ArchiveType.h  CommonTool.cpp  CommonTool.h  Global.cpp  Global.h  PwdManager.cpp
ArchiveToolCLR/: CMakeLists.txt
ArchiveToolCLR/src/: ArchiveToolCLRMain.cpp
ArchiveToolUI/: ArchiveToolUI.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
ArchiveToolUI/Properties/: launchSettings.json
GltfViewerCLR/: CMakeLists.txt
GltfViewerCLR/src/: GltfViewerCLRMain.cpp
GltfViewerCore/: CMakeLists.txt
GltfViewerCore/interface/: GltfRender.h
GltfViewerCore/shader/: shader.frag  shader.vert
GltfViewerCore/src/: CommonTool.cpp  CommonTool.h  GLGeometry.h  GltfRender.cpp  GltfRenderGLCore.cpp  GltfRenderGLCore.h  TinyGltfInstance.cpp  main - copy.cpp  main - 副本 (2).cpp  main - 副本 (3).cpp  main - 副本.cpp  main.cpp
Test/: CMakeLists.txt
Test/src/: main.cpp
example/: example-vulkan-基础运行2.cpp  gpu-ceshi .cpp  gpu-离屏渲染.cpp  gpu取最大值.cpp
